Docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,8 @@ version: '2'
 services:
 
   server:
-    build: ./app
+    build: .
     ports:
       - "9000:9000"
-    networks:
-      - ethereal-network
-
-  redis:
-    image: redis
-    ports:
-     - "6379"
-    networks:
-      - ethereal-network
-
-networks:
-  ethereal-network:
-    driver: bridge
+    environment:
+      - APP_CONFIG_FILE=./config/production.py
